--- a/Auth/package.json
+++ b/Auth/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
